--- a/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/BioBaseCLIA/BioBaseCLIA.csproj
@@ -358,6 +358,12 @@
     <Compile Include="SysMaintenance\frmInstruMaintenance.designer.cs">
       <DependentUpon>frmInstruMaintenance.cs</DependentUpon>
     </Compile>
+    <Compile Include="SysMaintenance\frmReconfirm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SysMaintenance\frmReconfirm.Designer.cs">
+      <DependentUpon>frmReconfirm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CustomControl\TabControlMy.resx">
       <DependentUpon>TabControlMy.cs</DependentUpon>
     </EmbeddedResource>
@@ -561,6 +567,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SysMaintenance\frmInstruMaintenance.resx">
       <DependentUpon>frmInstruMaintenance.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SysMaintenance\frmReconfirm.resx">
+      <DependentUpon>frmReconfirm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Properties\DataSources\BioBaseCLIA.Run.LogOfAlarm.datasource" />
