--- a/trunk/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/trunk/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
@@ -422,7 +422,13 @@
     <EmbeddedResource Include="frmLogin.en-US.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmLogin.en.resx">
+      <DependentUpon>frmLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.en-US.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmMain.en.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
