--- a/trunk/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/trunk/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
@@ -571,6 +571,9 @@
     <EmbeddedResource Include="SysMaintenance\frmInstruMaintenance.en-US.resx">
       <DependentUpon>frmInstruMaintenance.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="SysMaintenance\frmInstruMaintenance.en.resx">
+      <DependentUpon>frmInstruMaintenance.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SysMaintenance\frmInstruMaintenance.resx">
       <DependentUpon>frmInstruMaintenance.cs</DependentUpon>
     </EmbeddedResource>
