提交一个窗体英文界面及项目文件

--- a/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
@@ -448,6 +448,9 @@
     <EmbeddedResource Include="frmMessageShow.en-US.resx">
       <DependentUpon>frmMessageShow.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmMessageShow.en.resx">
+      <DependentUpon>frmMessageShow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMessageShow.resx">
       <DependentUpon>frmMessageShow.cs</DependentUpon>
     </EmbeddedResource>
