Common中添加一个extension文件夹和项目文件提交

--- a/BioBaseCLIA(BKI1100)_新台式/Common/Common.csproj
+++ b/BioBaseCLIA(BKI1100)_新台式/Common/Common.csproj
@@ -78,6 +78,7 @@
     <Compile Include="CalculateCurve\report.cs" />
     <Compile Include="CalculateCurve\StringT.cs" />
     <Compile Include="DataTableExcel.cs" />
+    <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="LocalPrinter.cs" />
     <Compile Include="OperateExcel.cs" />
     <Compile Include="OperateIniFile.cs" />
