--- a/trunk/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/trunk/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
@@ -603,6 +603,9 @@
     <EmbeddedResource Include="Run\LoaderForm.resx">
       <DependentUpon>LoaderForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ScalingQC\frmQC.en.resx">
+      <DependentUpon>frmQC.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ScalingQC\frmQC.resx">
       <DependentUpon>frmQC.cs</DependentUpon>
     </EmbeddedResource>
