--- a/branches/BioBaseCLIA(BKI1100)_新/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/branches/BioBaseCLIA(BKI1100)_新/BioBaseCLIA/BioBaseCLIA.csproj
@@ -547,6 +547,9 @@
     <EmbeddedResource Include="ScalingQC\frmQC.resx">
       <DependentUpon>frmQC.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ScalingQC\frmScaling.en.resx">
+      <DependentUpon>frmScaling.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ScalingQC\frmScaling.resx">
       <DependentUpon>frmScaling.cs</DependentUpon>
     </EmbeddedResource>
