--- a/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
@@ -609,6 +609,9 @@
     <EmbeddedResource Include="ScalingQC\frmQC.resx">
       <DependentUpon>frmQC.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ScalingQC\frmScaling.en.resx">
+      <DependentUpon>frmScaling.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ScalingQC\frmScaling.resx">
       <DependentUpon>frmScaling.cs</DependentUpon>
     </EmbeddedResource>
