提交更新主曲线英文界面修改。

--- a/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
@@ -548,6 +548,9 @@
     <EmbeddedResource Include="Run\frmAddScaling.en-US.resx">
       <DependentUpon>frmAddScaling.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Run\frmAddScaling.en.resx">
+      <DependentUpon>frmAddScaling.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Run\frmAddScaling.resx">
       <DependentUpon>frmAddScaling.cs</DependentUpon>
     </EmbeddedResource>
