--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
@@ -530,6 +530,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="InfoSetting\frmNetSet.en.resx">
       <DependentUpon>frmNetSet.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="InfoSetting\frmNetSet.resx">
       <DependentUpon>frmNetSet.cs</DependentUpon>
