仪器调试添加老化测试抓手计数功能 主界面取消了最小化，更改为版本信息

--- a/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
@@ -235,6 +235,7 @@
     <Compile Include="InfoSetting\HL7\ServeyReport.cs" />
     <Compile Include="InfoSetting\Inspect.cs" />
     <Compile Include="InfoSetting\LisCommunication.cs" />
+    <Compile Include="LogFileRtest.cs" />
     <Compile Include="NetCom3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
