添加稀释液一键解绑和绑定状态显示 将软件代码设计到的孔位信息数字改为固定常量

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
@@ -527,6 +527,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="InfoSetting\frmInstrumentPara.resx">
       <DependentUpon>frmInstrumentPara.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="InfoSetting\frmNetSet.en.resx">
       <DependentUpon>frmNetSet.cs</DependentUpon>
@@ -669,6 +670,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SysMaintenance\frmInstruMaintenance.resx">
       <DependentUpon>frmInstruMaintenance.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="SysMaintenance\frmReconfirm.resx">
       <DependentUpon>frmReconfirm.cs</DependentUpon>
