--- a/trunk/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/trunk/BioBaseCLIA(BKI1100)_新台式/BioBaseCLIA/BioBaseCLIA.csproj
@@ -490,6 +490,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="InfoSetting\frmInfo.resx">
       <DependentUpon>frmInfo.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="InfoSetting\frmInstrumentPara.en-US.resx">
       <DependentUpon>frmInstrumentPara.cs</DependentUpon>
