--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
@@ -592,6 +592,9 @@
     <EmbeddedResource Include="Run\frmLogShow.en-US.resx">
       <DependentUpon>frmLogShow.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Run\frmLogShow.en.resx">
+      <DependentUpon>frmLogShow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Run\frmLogShow.resx">
       <DependentUpon>frmLogShow.cs</DependentUpon>
       <SubType>Designer</SubType>
