更新Run中英文界面

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
@@ -469,6 +469,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DataQuery\frmSupplyStatus.en.resx">
       <DependentUpon>frmSupplyStatus.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="DataQuery\frmSupplyStatus.resx">
       <DependentUpon>frmSupplyStatus.cs</DependentUpon>
@@ -570,6 +571,9 @@
     <EmbeddedResource Include="Run\frmAddSample.en-US.resx">
       <DependentUpon>frmAddSample.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Run\frmAddSample.en.resx">
+      <DependentUpon>frmAddSample.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Run\frmAddSample.resx">
       <DependentUpon>frmAddSample.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -582,6 +586,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Run\frmAddScaling.resx">
       <DependentUpon>frmAddScaling.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Run\frmLoadDiu.en.resx">
+      <DependentUpon>frmLoadDiu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Run\frmLoadDiu.resx">
       <DependentUpon>frmLoadDiu.cs</DependentUpon>
@@ -602,11 +609,17 @@
     <EmbeddedResource Include="Run\frmReagentLoad.en-US.resx">
       <DependentUpon>frmReagentLoad.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Run\frmReagentLoad.en.resx">
+      <DependentUpon>frmReagentLoad.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Run\frmReagentLoad.resx">
       <DependentUpon>frmReagentLoad.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Run\frmRunInfoModify.en-US.resx">
+      <DependentUpon>frmRunInfoModify.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Run\frmRunInfoModify.en.resx">
       <DependentUpon>frmRunInfoModify.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Run\frmRunInfoModify.resx">
@@ -615,10 +628,16 @@
     <EmbeddedResource Include="Run\frmSampleLoad.en-US.resx">
       <DependentUpon>frmSampleLoad.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Run\frmSampleLoad.en.resx">
+      <DependentUpon>frmSampleLoad.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Run\frmSampleLoad.resx">
       <DependentUpon>frmSampleLoad.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Run\frmTestResult.en-US.resx">
+      <DependentUpon>frmTestResult.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Run\frmTestResult.en.resx">
       <DependentUpon>frmTestResult.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Run\frmTestResult.resx">
@@ -637,6 +656,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Run\frmWorkList.resx">
       <DependentUpon>frmWorkList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Run\LoaderForm.en.resx">
+      <DependentUpon>LoaderForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Run\LoaderForm.resx">
       <DependentUpon>LoaderForm.cs</DependentUpon>
