--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
@@ -714,6 +714,9 @@
     <EmbeddedResource Include="Run\frmWorkList.en-US.resx">
       <DependentUpon>frmWorkList.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Run\frmWorkList.en.resx">
+      <DependentUpon>frmWorkList.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Run\frmWorkList.resx">
       <DependentUpon>frmWorkList.cs</DependentUpon>
     </EmbeddedResource>
