--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
@@ -506,6 +506,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.en-US.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.en.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
