--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
@@ -182,6 +182,7 @@
     <Compile Include="DataQuery\frmSupplyStatus.designer.cs">
       <DependentUpon>frmSupplyStatus.cs</DependentUpon>
     </Compile>
+    <Compile Include="Extentions\IListExtention.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
