提交最近修改的英文提示信息

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/BioBaseCLIA.csproj
@@ -456,6 +456,9 @@
     <EmbeddedResource Include="DataQuery\frmAddSampleResult.resx">
       <DependentUpon>frmAddSampleResult.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="DataQuery\frmDataAnalysis.en.resx">
+      <DependentUpon>frmDataAnalysis.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DataQuery\frmDataAnalysis.resx">
       <DependentUpon>frmDataAnalysis.cs</DependentUpon>
     </EmbeddedResource>
@@ -694,6 +697,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Run\frmReagentLoad.en.resx">
       <DependentUpon>frmReagentLoad.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Run\frmReagentLoad.resx">
       <DependentUpon>frmReagentLoad.cs</DependentUpon>
@@ -716,12 +720,14 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Run\frmSampleLoad.resx">
       <DependentUpon>frmSampleLoad.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Run\frmTestResult.en-US.resx">
       <DependentUpon>frmTestResult.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Run\frmTestResult.en.resx">
       <DependentUpon>frmTestResult.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Run\frmTestResult.resx">
       <DependentUpon>frmTestResult.cs</DependentUpon>
@@ -939,6 +945,7 @@
     <None Include="Resources\temperature_2.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\title1.png" />
     <Content Include="图标I.ico" />
     <None Include="Resources\声音关闭.png" />
     <None Include="Resources\声音启用.png" />
