--- a/trunk/BioBaseCLIA(BKI1100)_R30/Common/Common.csproj
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/Common/Common.csproj
@@ -92,6 +92,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>reportCurve.resx</DependentUpon>
     </Compile>
+    <Compile Include="ScanerHook.cs" />
     <Compile Include="SerializerHelper.cs" />
   </ItemGroup>
   <ItemGroup>
